--- a/src/views/resetPasswordPage.ejs
+++ b/src/views/resetPasswordPage.ejs
@@ -26,9 +26,9 @@
         <h1 style="font-size: 24px; margin-bottom: 10px;">Reset Password</h1>
         <p style="font-size: 18px; color: #ccc; margin-bottom: 20px;">Please enter your new password to reset it.</p>
         <form action="/auth/api/v1/password/reset/<%= userId%>" method="POST" style="display: flex; flex-direction: column; align-items: center;">
-            <input type="password" placeholder="New Password" required class="password-field"
+            <input type="password" name="password" placeholder="New Password" required class="password-field"
                    style="padding: 10px; margin: 10px 0; width: 80%; border: 1px solid #444; border-radius: 5px; background-color: #222; color: #fff;">
-            <input type="password" placeholder="Confirm Password" required class="password-field"
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" required class="password-field"
                    style="padding: 10px; margin: 10px 0; width: 80%; border: 1px solid #444; border-radius: 5px; background-color: #222; color: #fff;">
 
             <div style="text-align: left; width: 80%; margin-top: 10px; color: #ccc;">
